Estructuras de control

--- a/templates/hello.html
+++ b/templates/hello.html
@@ -5,6 +5,18 @@
     <title>Title</title>
 </head>
 <body>
-    <h1>Hello world platzi, tu ip es {{ user_ip }}</h1>
+    {% if user_ip %}
+        <h1>Hello world platzi, tu ip es {{ user_ip }}</h1>
+    {% else %}
+        <a href="{{ url_for('index') }}">Inicio</a>
+    {% endif %}
+
+    <ul>
+        {% for to_do in to_dos %}
+            <li>{{ to_do }}</li>
+        {% endfor %}
+    </ul>
+
+
 </body>
 </html>
