--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Flask platzi |  {% endblock %}</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename = 'css/main.css') }}" />
 </head>
 <body>
+    <header>
+        {% include 'navbar.html' %}
+    </header>
     {% block content %}
     {% endblock %}
 </body>
