--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{%  extends 'bootstrap/base.html'%}
+
+
+{% block head %}
+    {{ super() }}
+
     <title>{% block title %} Flask platzi |  {% endblock %}</title>
     <link rel="stylesheet" href="{{ url_for('static',filename = 'css/main.css') }}" />
-</head>
-<body>
-    <header>
+{% endblock %}
+
+{% block body %}
+    {% block navbar %}
         {% include 'navbar.html' %}
-    </header>
-    {% block content %}
     {% endblock %}
-</body>
-</html>
+    {% block content %}{% endblock %}
+
+{% endblock %}
