--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% import 'macros.html' as macros %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
 {% block title %}
     {{ super() }}
@@ -12,6 +13,15 @@
     {% else %}
         <a href="{{ url_for('index') }}">Inicio</a>
     {% endif %}
+
+    <div class="container">
+        <form action="{{ url_for('hello') }}" method="post">
+{#            {{ login_form.username }}#}
+{#            {{ login_form.username.label }}#}
+
+            {{ wtf.quick_form(login_form) }}
+        </form>
+    </div>
 
     <ul>
         {% for to_do in to_dos %}
