--- a/templates/hello.html
+++ b/templates/hello.html
@@ -16,9 +16,11 @@
 
     <div class="container">
         <form action="{{ url_for('hello') }}" method="post">
+{#            Este recibe el objeto y crea un formulario#}
 {#            {{ login_form.username }}#}
 {#            {{ login_form.username.label }}#}
 
+{#            Este crea re gratis un formulario traido de bootstrap re completo#}
             {{ wtf.quick_form(login_form) }}
         </form>
     </div>
