--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{#Importa los archivos css de bootstrap#}
 {%  extends 'bootstrap/base.html'%}
 
 
@@ -12,6 +13,24 @@
     {% block navbar %}
         {% include 'navbar.html' %}
     {% endblock %}
+
+{#    Carga todos los flashes mandados#}
+    {%  for message in get_flashed_messages() %}
+        <div class="alert alert-success alert-dismissable">
+            <button type="button"
+                    data-dismiss="alert"
+                    class="close">
+                &times;
+            </button>
+            <p>{{ message }}</p>
+        </div>
+    {%  endfor %}
+
     {% block content %}{% endblock %}
+
+{#    Hereda los scripts de bootstrap#}
+    {% block scripts %}
+        {{ super() }}
+    {% endblock %}
 
 {% endblock %}
