--- a/templates/hello.html
+++ b/templates/hello.html
@@ -8,8 +8,12 @@
 {% endblock %}
 
 {% block content %}
+    {% if username %}
+        <h1>Bienvenido {{ username | capitalize }}</h1>
+    {% endif %}
+
     {% if user_ip %}
-        <h1>Hello world platzi, tu ip es {{ user_ip }}</h1>
+        <h3>Tu ip es {{ user_ip }}</h3>
     {% else %}
         <a href="{{ url_for('index') }}">Inicio</a>
     {% endif %}
