--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -7,6 +7,13 @@
 
 {% block content %}
     <div class="container">
+{#        <form action="{{ url_for('hello') }}" method="post">#}
+{#            Este recibe el objeto y crea un formulario#}
+{#            {{ login_form.username }}#}
+{#            {{ login_form.username.label }}#}
+{#        </form>#}
+        {# Este crea re gratis un formulario traido de bootstrap re completo#}
         {{ wtf.quick_form(login_form) }}
     </div>
+
 {% endblock %}
