--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,3 +1,3 @@
 {% macro render_todo(to_do) %}
-    <li>Descripcion: {{ to_do }}</li>
+    <li>Descripcion: {{ to_do.to_dict().description }}</li>
 {% endmacro %}
