--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -27,6 +27,10 @@
 
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
+                {% if current_user.is_authenticated %}
+                    <li><a href="{{ url_for('auth.logout') }}">Log-out</a></li>
+                {% endif %}
+
                 <li><a href="{{ url_for('index') }}">Inicio</a></li>
                 <li><a href="https://www.tesla.com/" target="_blank">Tesla</a></li>
             </ul>
