--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,8 +6,7 @@
     {{ super() }}
 
     <title>{% block title %} Flask platzi |  {% endblock %}</title>
-    <link rel="stylesheet" href="{{ url_for('static',filename = 'css/main.css') }}" />
-{% endblock %}
+    <link rel="stylesheet" href="{{ url_for('static',filename = 'css/main.css') }}" />{% endblock %}
 
 {% block body %}
     {% block navbar %}
