--- a/app/templates/singup.html
+++ b/app/templates/singup.html
@@ -1,15 +1,38 @@
-{% extends 'base.html' %}
+{%  extends 'bootstrap/base.html'%}
 {% import 'bootstrap/wtf.html' as wtf %}
-{% block title %}
+
+{% block head %}
     {{ super() }}
-    Sing-up
+
+    <title>Flask platzi | Sing-up</title>
+    <link rel="stylesheet" href="{{ url_for('static',filename = 'css/main.css') }}" />
 {% endblock %}
+{% block body %}
+    {% if get_flashed_messages()[0] %}
+        <div class="alert alert-success alert-dismissable">
+            <button type="button"
+                    data-dismiss="alert"
+                    class="close"
+                    style="margin: 0">
 
-{% block content %}
-    <div class="container">
-        <H1>Registra tu cuenta</H1>
-        <br>
+                &times;
+            </button>
+            <p>{{ get_flashed_messages()[0] }}</p>
+        </div>
+    {% endif %}
+
+    <div class="container login-panel">
+{#        <form action="{{ url_for('hello') }}" method="post">#}
+{#            Este recibe el objeto y crea un formulario#}
+{#            {{ login_form.username }}#}
+{#            {{ login_form.username.label }}#}
+{#        </form>#}
+        {# Este crea re gratis un formulario traido de bootstrap re completo#}
+        <h2>SING-UP</h2>
         {{ wtf.quick_form(singup_form) }}
-    </div>
 
+    </div>
+    {% block scripts %}
+        {{ super() }}
+    {% endblock %}
 {% endblock %}
